# Burrito

./: .flake8  .gitignore  .pylintrc  CHANGELOG.md  Dockerfile  Dockerfile.dependencies  Makefile  README.md  convert_dependencies.sh  docker-compose-airflow.yml  docker-compose-dbs.yml  docker-compose-locust.yml  docker-compose-redis.yml  docker-compose-separated.yml  docker-compose.yml  docs.conf  dump.sql  event_init.sql  install_components.py  main.py  make_docs.sh  nginx.conf  preprocessor_config.json  prometheus.yml  pyproject.toml  requirements.txt  test.py
.github/: dependabot.yml
.github/workflows/: airflow-publish.yml  bandit.yml  burrito-dependencies-image.yml  codeql.yml  docker-publish.yml  microservices-docker-publish.yml
apps/about/: router.py
apps/account/: router.py  views.py
apps/auth/: router.py  views.py
apps/registration/: router.py
burrito/: __init__.py  __main__.py  containers.py
burrito/airflow/: Dockerfile  utils.py
burrito/init/: init_system.py  init_task.py
burrito/middlewares/: auth.py  user_agent.py
burrito/mm/: exceptions.py  model_manager.py
burrito/models/: action_types_model.py  actions_model.py  basic_model.py  bookmarks_model.py  comments_model.py  deleted_model.py  division_model.py  faculty_model.py  group_model.py  issues_model.py  liked_model.py  m_actions_model.py  m_basic_model.py  m_comments_model.py  m_email_code.py  m_notifications_model.py  m_password_rest_model.py  m_ticket_files.py  notifications_model.py  participants_model.py  permissions_model.py  queue_watchers_model.py  queues_model.py  role_permissions_model.py  roles_model.py  statistic_model.py  statuses_model.py  subscriptions_model.py  tags_model.py  tickets_model.py  user_groups_model.py  user_model.py  ws_message.py
burrito/plugins/: base_plugin.py  loader.py
burrito/preprocessor/: Dockerfile  conf.py  core.py
burrito/schemas/: action_schema.py  admin_schema.py  anon_schema.py  auth_schema.py  comment_schema.py  division_schema.py  email_code.py  faculty_schema.py  filters_schema.py  group_schema.py  meta_schema.py  pagination_schema.py  profile_schema.py  queue_schema.py  registration_schema.py  status_schema.py  tickets_schema.py  user_schema.py
burrito/utils/: app_util.py  auth.py  auth_token_util.py  base_view.py  cache_util.py  config_reader.py  converter.py  date.py  db_utils.py  (+27 more)
docs/: index.html
grafana_data/: grafana.db
models/: issues_model.py  roles_model.py  statuses_model.py  tags_model.py  user_model.py
nginx/: cors_headers.conf  nginx.conf  websocket_settings.conf
schemas/: auth_schema.py  user_schema.py
scripts/: burrito_cluster_ping.py  burrito_cluster_run.sh  burrito_cluster_status.py  check_burrito_cluster.py  connect_to_db.sh  connect_to_redis.sh  docker_rm_all_images.sh  generate_changelog.sh  get_text_from_html.sh  prepare_db.py
storage/: file2.txt
tests/: about_test.py  admin_tests.py  anon_test.py  auth_test.py  build_airflow_image.sh  cmd_args.py  comments_test.py  create_db_env.py  create_user.py  fuzz_test.py  iofiles_test.py  locust_main.py  meta_test.py  notifications_test.py  profile_test.py  registration_test.py  run_tests.py  test_requests.py  tickets_test.py  utils.py
utils/: app_util.py  db_utils.py
(+2256 files in other folders)
