[tool.poetry]
name = "Burrito"
version = "2.0.0.alpha"
description = "API for the issue tracker"
authors = ["DimonBor", "m-o-d-e-r"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
anyio = "^3.6.2"
distro = "^1.8.0"
fastapi = "^0.105.0"
h11 = "^0.14.0"
idna = "^3.4"
peewee = "^3.16.0"
pydantic = "^1.10.7"
sniffio = "^1.3.0"
starlette = "^0.27.0"
typing-extensions = "^4.5.0"
uvicorn = "^0.28.0"
requests = "^2.28.2"
pymysql = {extras = ["rsa"], version = "^1.0.3"}
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"
aiofiles = "^23.1.0"
cryptography = "^41.0.2"
tabulate = "^0.9.0"
redis = "^5.0.1"
pymongo = "^4.4.1"
schedule = "^1.2.0"
pytz = "^2023.3"
argon2-cffi = "^23.1.0"
orjson = "^3.9.7"
websockets = "^12.0"
funcy = "^2.0"
deptry = "^0.12.0"
pyjwt = "^2.8.0"


[tool.poetry.group.dev.dependencies]
prospector = "^1.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"